# qt5-cinematic-experience

./: CMakeLists.txt  README.md  cinematic.qrc  main.cpp  qt5-cinematic-experience.pro  qt5-cinematicdemo.pro
content/: Button.qml  CurtainEffect.qml  DelegateItem.qml  FpsItem.qml  Switch.qml
rhishaders/: button.frag  button.frag.qsb  compile.bat  curtain.frag  curtain.frag.qsb  curtain.vert  curtain.vert.qsb  lighting.frag  lighting.frag.qsb  switch.frag  switch.frag.qsb
